--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,7 +13,8 @@
     "clean": "rimraf {.turbo,dist,node_modules,.zig-cache,.zig-out,tmp} && npm run clean-selva",
     "playground": "npm run build && LOCPATH=./build/locale node ./dist/test/shared/playground.js",
     "test": "npm run build && LOCPATH=./build/locale lldb -b -o run --one-line-on-crash bt -o \"script import os; os._exit(0)\" node ./scripts/test.js",
-    "test-fast": "LOCPATH=./build/locale node ./scripts/test.js"
+    "test-fast": "LOCPATH=./build/locale node ./scripts/test.js",
+    "test-ts": "tsc && node ./scripts/test.js"
   },
   "sideEffects": false,
   "files": [
