--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@based/react",
-  "version": "5.1.0",
+  "version": "5.2.0",
   "license": "MIT",
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc",
     "server": "node ./test/based-server.js",
+    "watch-server": "nodemon ./test/based-server.js",
     "browser": "npx vite ./test/browser",
     "watch": "npm run build -- --watch",
     "clean": "rimraf {.turbo,dist,node_modules}"
@@ -25,7 +26,9 @@
     "rimraf": "^3.0.2",
     "typescript": "^5.2.2",
     "react-dom": "^18.2.0",
+    "esbuild": "^0.24.0",
     "@based/client": "^6.0.1",
+    "nodemon": "^3.1.7",
     "vite": "^5.2.8",
     "@saulx/tsconfig": "^1.1.0"
   },
