--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -25,20 +25,21 @@
     "package.json"
   ],
   "dependencies": {
-    "data-record": "^2.0.0",
-    "@saulx/hash": "^3.0.0",
+    "@based/cli": "^8.0.0-alpha.1",
+    "@based/client": "^6.0.0",
     "@based/schema": "4",
-    "snappy": "^7.2.2",
-    "picocolors": "^1.0.1",
-    "@saulx/utils": "^4.3.2",
     "@based/server": "^8.0.0",
-    "@based/client": "^6.0.0"
+    "@saulx/hash": "^3.0.0",
+    "@saulx/utils": "^4.3.2",
+    "data-record": "^2.0.0",
+    "picocolors": "^1.0.1",
+    "snappy": "^7.2.2"
   },
   "devDependencies": {
     "@types/node": "^22.5.3",
     "lorem-ipsum": "^2.0.8",
+    "rimraf": "^3.0.2",
     "ts-node": "10.9.1",
-    "typescript": "^4.3.5",
-    "rimraf": "^3.0.2"
+    "typescript": "^4.3.5"
   }
 }
