--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -42,6 +42,7 @@
     "big-json": "^3.2.0",
     "JSONStream": "^1.3.5",
     "lorem-ipsum": "^2.0.8",
+    "pkg-dir": "^8.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "10.9.1",
     "typescript": "^4.3.5"
