--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^22.5.3",
     "better-sqlite3": "^11.5.0",
     "big-json": "^3.2.0",
+    "exit-hook": "^4.0.0",
     "JSONStream": "^1.3.5",
     "lorem-ipsum": "^2.0.8",
     "pkg-dir": "^8.0.0",
