--- a/packages/db/clibs/lib/selva/Makefile
+++ b/packages/db/clibs/lib/selva/Makefile
@@ -30,9 +30,10 @@ OBJ := \
 	io/io.o \
 	io/sdb.o \
 	langs.o \
+	node_id_set.o \
+	print_ready.o \
 	ref_save_map.o \
 	schema.o \
-	node_id_set.o \
 	sort.o \
 	traverse.o \
 	types.o \
