--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -16,6 +16,7 @@
     "playground-fast": "node ./dist/test/shared/playground.js",
     "test": "npm run build && LOCPATH=./build/locale lldb -b -o run --one-line-on-crash bt -o \"script import os; os._exit(0)\" node ./scripts/test.js",
     "test-fast": "LOCPATH=./build/locale node ./scripts/test.js",
+    "test-zig": "zig build && npm run test-fast",
     "test-ts": "tsc && node ./scripts/test.js",
     "perf": "npm run build && node benchmarks/references.js && node benchmarks/transfermarkt/transfermarkt-based.js"
   },
