Expose selva_mbstowc()

--- a/packages/db/clibs/lib/util/Makefile
+++ b/packages/db/clibs/lib/util/Makefile
@@ -31,6 +31,7 @@ OBJ := \
 	selva_error.o \
 	selva_lang/selva_lang.o \
 	selva_lang/selva_mbscmp.o \
+	selva_lang/selva_mbstowc.o \
 	selva_lang/selva_mbstrans.o \
 	selva_rusage.o \
 	selva_string.o \
