Implement selva_deflate_mbscmp()

--- a/packages/db/clibs/lib/util/Makefile
+++ b/packages/db/clibs/lib/util/Makefile
@@ -30,6 +30,7 @@ OBJ := \
 	queue_r.o \
 	selva_cpu.o \
 	selva_error.o \
+	selva_lang/selva_deflate_mbscmp.o \
 	selva_lang/selva_deflate_mbsstrstr.o \
 	selva_lang/selva_lang.o \
 	selva_lang/selva_mbscmp.o \
