Initial strsearch() func

--- a/packages/db/clibs/lib/selva/Makefile
+++ b/packages/db/clibs/lib/selva/Makefile
@@ -43,6 +43,7 @@ OBJ := \
 	selva_lang/selva_mbstowc.o \
 	selva_lang/selva_mbstrans.o \
 	sort.o \
+	strsearch.o \
 	traverse.o \
 	types.o \
 	update.o \
