--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@saulx/tsconfig/default.json",
   "compilerOptions": {
-    "outDir": "dist"
-  },
-  "include": ["src", "test"]
+    "outDir": "dist",
+    "noEmit": true
+  }
 }
