--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -28,25 +28,16 @@
     "package.json"
   ],
   "dependencies": {
-    "@based/cli": "^8.0.0-alpha.1",
-    "@based/client": "^6.0.0",
     "@based/schema": "4",
-    "@based/server": "^8.0.0",
     "@saulx/hash": "^3.0.0",
     "@saulx/utils": "^4.3.2",
-    "picocolors": "^1.0.1",
-    "snappy": "^7.2.2"
+    "picocolors": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.5.3",
-    "better-sqlite3": "^11.5.0",
-    "big-json": "^3.2.0",
     "exit-hook": "^4.0.0",
-    "JSONStream": "^1.3.5",
-    "lorem-ipsum": "^2.0.8",
     "pkg-dir": "^8.0.0",
     "rimraf": "^3.0.2",
-    "ts-node": "10.9.1",
     "typescript": "^5.6.3"
   }
 }
