--- a/packages/db/clibs/lib/nodeflate/Makefile
+++ b/packages/db/clibs/lib/nodeflate/Makefile
@@ -1,10 +1,10 @@
-# Copyright (c) 2024 SAULX
+# Copyright (c) 2024-2025 SAULX
 # SPDX-License-Identifier: MIT
 include ../../common.mk
 
 CFLAGS += -fPIC -fvisibility=hidden -iquote ../../include -I ../../../deps/node-v20.11.1/include/node -include ../../include/cdefs.h
 LDFLAGS += -shared -g \
-		   -L../../../build \
+		   -L$(LIB_PATH) \
 		   -ldeflate
 LIB_SUFFIX := .node
 
