Add test-gdb for Linux

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,6 +15,7 @@
     "playground": "npm run build && LOCPATH=./build/locale lldb -b -o run --one-line-on-crash bt -o \"script import os; os._exit(0)\" node ./dist/test/shared/playground.js",
     "playground-fast": "node ./dist/test/shared/playground.js",
     "test": "npm run build && LOCPATH=./build/locale lldb -b -o run --one-line-on-crash bt -o \"script import os; os._exit(0)\" node ./scripts/test.js",
+    "test-gdb": "npm run build && LOCPATH=./build/locale gdb -ex run --args node ./scripts/test.js",
     "test-fast": "LOCPATH=./build/locale node ./scripts/test.js",
     "test-zig": "zig build && npm run test-fast",
     "test-ts": "tsc && node ./scripts/test.js",
