build ok darwin

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -23,7 +23,7 @@
   },
   "sideEffects": false,
   "files": [
-    "dist/lib.node*",
+    "dist/lib/*/libnode*",
     "dist/src",
     "README.md",
     "package.json"
