--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -36,9 +36,11 @@
   },
   "devDependencies": {
     "@types/node": "^22.5.3",
+    "axios": "^1.7.9",
     "exit-hook": "^4.0.0",
     "pkg-dir": "^8.0.0",
     "rimraf": "^3.0.2",
+    "tar": "^7.4.3",
     "typescript": "^5.6.3"
   }
 }
