change default platform behaviour and accept release argument

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,7 +8,8 @@
     "get-napi": "./scripts/download-node-headers.sh",
     "build-selva": "make -C clibs",
     "build-zig": "npx tsx scripts/zig_cross_compile.ts",
-    "build": "npm run build-selva && npm run build zig && tsc",
+    "build": "npm run build-selva && npm run build-zig && tsc",
+    "build-release": "npm run build-selva && npm run build-zig -- release && tsc",
     "watch": "npx tsc --watch",
     "clean-selva": "rm -rf build && make -C clibs clean",
     "clean": "rimraf {.turbo,dist,node_modules,.zig-cache,.zig-out,tmp} && npm run clean-selva",
