--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,7 +9,7 @@
     "build-zig": "npx tsx scripts/zig_cross_compile.ts",
     "build-release": "cd clibs && ./build-release.sh && cd .. && npm run build-zig -- release && tsc",
     "watch": "npx tsc --watch",
-    "clean-selva": "rm -rf build && make -C clibs clean",
+    "clean-selva": "make -C clibs clean",
     "clean": "rimraf {.turbo,dist,node_modules,.zig-cache,.zig-out,tmp} && npm run clean-selva",
     "playground-nodebug": "npm run build && node ./dist/test/shared/playground.js",
     "playground": "npm run build && LOCPATH=./build/locale lldb -b -o run --one-line-on-crash bt -o \"script import os; os._exit(0)\" node ./dist/test/shared/playground.js",
