--- a/packages/db/clibs/lib/jemalloc/Makefile
+++ b/packages/db/clibs/lib/jemalloc/Makefile
@@ -16,20 +16,13 @@ JEMALLOC_CONFIG := --with-version=VERSION \
 JEMALLOC_CFLAGS := -std=gnu99 -fPIC -Wall -Wno-missing-braces -pipe -g3 -O3 -funroll-loops
 JEMALLOC_LDFLAGS := $(LDFLAGS)
 
-ifeq ($(uname_S),Linux) # Assume Intel x86-64 Linux
-	SELVA_ARCH := linux_x64
-endif
 ifeq ($(uname_S),Darwin) # Assume x86-64 macOS
-	SELVA_ARCH := darwin_x64
 	JEMALLOC_LIBDIR := "@rpath"
 	# the configure script calls cpuid, but it does not work properly on Rosetta 2 and QEMU
 	JEMALLOC_CONFIG += --with-lg-vaddr=48
 	# TODO Might be unnecessary
 	JEMALLOC_SYS_WITH_LG_VADDR := 48
 	JEMALLOC_CFLAGS += -Wno-typedef-redefinition -Wno-frame-address
-endif
-ifndef SELVA_ARCH
-$(error SELVA_ARCH is not set)
 endif
 
 .make-prerequisites:
@@ -38,7 +31,7 @@ endif
 all: .make-prerequisites jemalloc-$(JEMALLOC_VER)/config.status
 	cd jemalloc-$(JEMALLOC_VER) && $(MAKE) CFLAGS="$(JEMALLOC_CFLAGS)" LDFLAGS="$(JEMALLOC_LDFLAGS)" LIBDIR="$(JEMALLOC_LIBDIR)" build_lib_shared
 	cp -P jemalloc-$(JEMALLOC_VER)/lib/* "$(LIB_PATH)"
-	rsync --checksum "jemalloc-$(JEMALLOC_VER)/include/jemalloc/jemalloc_selva.h" "../../include/jemalloc_$(SELVA_ARCH).h"
+	rsync --checksum "jemalloc-$(JEMALLOC_VER)/include/jemalloc/jemalloc_selva.h" "../../include/jemalloc.h"
 
 jemalloc-$(JEMALLOC_VER)/config.status:
 	cd jemalloc-$(JEMALLOC_VER) && ./configure $(JEMALLOC_CONFIG) CFLAGS="$(JEMALLOC_CFLAGS)" LDFLAGS="$(JEMALLOC_LDFLAGS)" LIBDIR="$(JEMALLOC_LIBDIR)"
