--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "type": "module",
-  "main": "./dist/src/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "build": "make -C clibs && npm run build-zig && tsc",
     "build-zig": "npx tsx scripts/zig_cross_compile.ts",
@@ -23,8 +23,7 @@
   },
   "sideEffects": false,
   "files": [
-    "dist/lib/*/libnode*",
-    "dist/src",
+    "dist",
     "README.md",
     "package.json"
   ],
@@ -35,7 +34,7 @@
     "picocolors": "^1.0.1"
   },
   "optionalDependencies": {
-      "@based/locale-x86-64-gnu": "*"
+    "@based/locale-x86-64-gnu": "*"
   },
   "devDependencies": {
     "@types/node": "^22.5.3",
