remove wrong test

--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -4,7 +4,8 @@
     "composite": true,
     "outDir": "dist",
     "rootDir": "src",
-    "declarationMap": true
+    "declarationMap": true,
+    "esModuleInterop": true
   },
   "include": ["src"]
 }
