--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@based/schema",
-  "version": "4.1.1",
+  "version": "5.0.0-alpha.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
