Fix schema version

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -28,7 +28,7 @@
     "package.json"
   ],
   "dependencies": {
-    "@based/schema": "4.1.1",
+    "@based/schema": "5.0.0-alpha.0",
     "@saulx/hash": "^3.0.0",
     "@saulx/utils": "^4.3.2",
     "picocolors": "^1.1.0"
