--- a/packages/db/clibs/lib/selva/fuzz/Makefile
+++ b/packages/db/clibs/lib/selva/fuzz/Makefile
@@ -4,12 +4,15 @@
 CFLAGS := -std=gnu2x -g -O1 \
 		  -include ../../../include/cdefs.h -I../../../include \
 		  -Wno-unknown-attributes \
-		  -fsanitize=fuzzer,signed-integer-overflow
+		  -fsanitize=fuzzer,signed-integer-overflow,address
 
-all: strrnchr get_array_field_index stringlist_search
+all: strrnchr stringlist_search strsearch_hamming_mbs
 
 strrnchr: strrnchr.c ../string/cstrings.c
 	clang $(CFLAGS) $^ -o $@
 
-stringlist_search: stringlist_search.c ../cstrings.c
+stringlist_search: stringlist_search.c ../string/cstrings.c
+	clang $(CFLAGS) $^ -o $@
+
+strsearch_hamming_mbs: strsearch_hamming_mbs.c ../string/strsearch_hamming.c
 	clang $(CFLAGS) $^ -o $@
