--- a/packages/db/clibs/lib/selva/fuzz/Makefile
+++ b/packages/db/clibs/lib/selva/fuzz/Makefile
@@ -6,7 +6,7 @@ CFLAGS := -std=gnu2x -g -O1 \
 		  -Wno-unknown-attributes \
 		  -fsanitize=fuzzer,signed-integer-overflow,address
 
-all: strrnchr stringlist_search strsearch_hamming_mbs
+all: strrnchr stringlist_search strsearch_hamming_mbs fast_linear_search
 
 strrnchr: strrnchr.c ../string/cstrings.c
 	clang $(CFLAGS) $^ -o $@
@@ -15,4 +15,7 @@ stringlist_search: stringlist_search.c ../string/cstrings.c
 	clang $(CFLAGS) $^ -o $@
 
 strsearch_hamming_mbs: strsearch_hamming_mbs.c ../string/strsearch_hamming.c
+	clang $(CFLAGS) $^ -o $@
+
+fast_linear_search: fast_linear_search.c ../fast_linear_search.c
 	clang $(CFLAGS) $^ -o $@
