--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "type": "module",
-  "main": "./src/index.js",
+  "main": "./dist/src/index.js",
   "scripts": {
     "build": "make -C clibs && npm run build-zig && tsc",
     "build-zig": "npx tsx scripts/zig_cross_compile.ts",
