--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@based/functions",
-  "version": "3.1.2-alpha",
+  "version": "3.1.2",
   "license": "MIT",
   "type": "module",
   "main": "dist/index.js",
