--- a/packages/db/clibs/Makefile
+++ b/packages/db/clibs/Makefile
@@ -44,5 +44,9 @@ clean:
 	find ./lib \( -type l -o -type l \) -name "*.dylib" -exec rm -f {} \;
 	find ./lib -type d -maxdepth 1 -exec $(MAKE) -C {} clean \;
 
+# New target for hll executable
+hll: lib/selva
+	$(CC) -g -o lib/selva/hll/hll lib/selva/hll/hll.c -Iinclude -Ilib/xxHash -L"$(subst ../../,,$(LIB_PATH))/" -lm -lselva -lxxhash -Wno-unknown-attributes -Wl,-rpath,"$(subst ../../,,$(LIB_PATH))/"
+
 .PHONY: all prapare clean lib $(LIBS) test platform
 .NOTPARALLEL:
