--- a/packages/db/clibs/lib/selva/Makefile
+++ b/packages/db/clibs/lib/selva/Makefile
@@ -66,6 +66,7 @@ OBJ := \
 	string/strntol.o \
 	string/strsearch_hamming.o \
 	string/strsearch_levenshtein.o \
+	string/xxhash64.o \
 	svector.o \
 	time/backoff_timeout.o \
 	time/ctime.o \
