--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -36,7 +36,7 @@
     "@saulx/utils": "^4.3.2",
     "exit-hook": "^4.0.0",
     "picocolors": "^1.1.0",
-    "@based/crc32c": "ˆ1.0.0"
+    "@based/crc32c": "^1.0.0"
   },
   "optionalDependencies": {
     "@based/locale-x86-64-gnu": "*"
