--- a/packages/crc32c/package.json
+++ b/packages/crc32c/package.json
@@ -2,6 +2,7 @@
   "name": "@based/crc32c",
   "version": "1.0.0",
   "license": "UNLICENSED",
+  "type": "module",
   "main": "dist/crc32c.js",
   "types": "dist/crc32c.d.ts",
   "files": [
