--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -42,6 +42,7 @@
     "@based/locale-x86-64-gnu": "*"
   },
   "devDependencies": {
+    "@based/crc32c": "^1.0.0",
     "@types/node": "^22.5.3",
     "axios": "^1.7.9",
     "rimraf": "^3.0.2",
