fix readme to use mit and give authorship

--- a/packages/crc32c/package.json
+++ b/packages/crc32c/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@based/crc32c",
   "version": "1.0.0",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "type": "module",
   "main": "dist/crc32c.js",
   "types": "dist/crc32c.d.ts",
