--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -2,13 +2,16 @@
   "name": "@based/schema",
   "version": "5.0.0-alpha.3",
   "license": "MIT",
-  "main": "dist/index.js",
   "files": [
     "dist",
     "README.md",
     "package.json",
     "!dist/**/*.map"
   ],
+  "exports": {
+    "./def": "./dist/def/index.js",
+    ".": "./dist/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
@@ -26,6 +29,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@saulx/utils": "^5.0.0",
     "picocolors": "^1.1.0"
   }
 }
