--- a/podman/Containerfile
+++ b/podman/Containerfile
@@ -1,4 +1,18 @@
 FROM gcc:14.2
+ENV NODE_VERSION 20.11.1
+ENV NVM_DIR /usr/local/nvm
 RUN apt-get update && \
-    apt-get install -y rsync git patchelf
+    apt-get install -y rsync git patchelf && \
+    rm -rf /var/lib/apt/lists/* && \
+    mkdir -p "$NVM_DIR" && \
+    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.2/install.sh | bash && \
+    \. "$NVM_DIR/nvm.sh" && \
+    nvm install $NODE_VERSION && \
+    nvm alias default $NODE_VERSION && \
+    nvm use default
+ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
+ENV PATH      $NVM_DIR/v$NODE_VERSION/bin:$PATH
 CMD ["/bin/bash", "-c", "cd /usr/src/based-db/packages/db/clibs && make"]
+
+# now you can run something like this
+# % podman run --rm -v "$PWD/../..:/usr/src/based-db" based-db-clibs-build-linux_aarch64 sh -c '\. "/usr/local/nvm/nvm.sh"; cd /usr/src/based-db; npm i; npm run build; cd packages/db; npm run test-fast'
