Add intel optimized fast_memcmp()

--- a/packages/db/clibs/lib/selva/Makefile
+++ b/packages/db/clibs/lib/selva/Makefile
@@ -84,7 +84,7 @@ OBJ := \
 ifeq ($(uname_M),x86_64)
 OBJ += \
 	crc32c/crc32c_x64.o \
-	string/fast_memcmp.o
+	string/fast_memcmp_x64.o
 else ifeq ($(uname_M),aarch64)
 OBJ += \
 	crc32c/crc32c_arm64.o \
