--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -8,6 +8,7 @@
     "package.json",
     "!dist/**/*.map"
   ],
+  "main": "./dist/index.js",
   "exports": {
     "./def": "./dist/def/index.js",
     ".": "./dist/index.js"
